--- a/index2.html
+++ b/index2.html
@@ -57,7 +57,7 @@
               <a href="#stationpedia" class="dropdown-toggle" data-toggle="dropdown" style="color:white">Stationpedia<span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="s1.html">Andheri</a></li>
-                <li><a href="s2.html">Versova</a></li>
+                <!--li><a href="s2.html">Versova</a></li-->
                 <li><a href="s3.html">Ghatkopar</a></li>
                 
             </li>
