--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <!-- Bootstrap theme -->
     <link href="css/bootstrap-theme.min.css" rel="stylesheet">
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+    <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="theme.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
+    <script src="js/ie-emulation-modes-warning.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -59,7 +59,7 @@
               <a href="#stationpedia" class="dropdown-toggle" data-toggle="dropdown" style="color:white">Stationpedia<span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="s1.html"  style="color:black">Andheri</a></li>
-                <li><a href="s2.html"  style="color:black">Versova</a></li>
+                <!--li><a href="s2.html"  style="color:black">Versova</a></li-->
                 <li><a href="s3.html"  style="color:black">Ghatkopar</a></li>
                 <!--li role="separator" class="divider"></li>
                 <li class="dropdown-header">Nav header</li>
@@ -155,8 +155,8 @@
       <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron">
         <h1>INSTALLATION STEPS</h1>
-        <p>1.On the mobile phone you wish to install the application , open the internet browser and type in the following URL http://www.<br>
-2.You will be prompted to download the “  “ application. Tick the box to set application permissions, then select download. You will see a list of options to allow/deny permissions, change all permissions to 'allow'.<br>
+        <p>1.On the mobile phone you wish to install the application , open the internet browser and type in the following URL https://SachinMadhavan.github.io or go to the playstore and download the application<br>
+2.You will be prompted to download the Mumbai-Metro application. Tick the box to set application permissions, then select download. You will see a list of options to allow/deny permissions, change all permissions to 'allow'.<br>
 3.Once the application has been downloaded, you will need to reboot. Switch off the handset then turn it back on. The handset is now ready to be monitored.<br>
       </div>
 
@@ -169,6 +169,69 @@
 4.This barcode will be actively open for 120 seconds, so holding your phones scan the bar code on the entry machine and enter the platform.<br>
 5.Once you reach the destination click on retrieve bar code to scan your eticket again.<br>
       </div>
+	  
+	  <div class="jumbotron">
+        
+        <DIV class="d3">
+		<h3>
+		<div class="table-responsive">
+<table class="table" border="10px solid black"><h2 style="text-align:center">
+FUTURE METRO PROJECTS IN MUMBAI
+</h2>
+</caption>
+
+<tr>
+<th>Line</th>
+<th>Name of Corridor</th>
+<th>Length(kms)</th>
+<th>Estimated Cost(Crores)</th>
+<th>Status</th>
+</tr>
+
+<tr>
+<td>1.</td>
+<td>Dahisar–Mankhurd</td>
+<td>42.1</td>
+<td>₹17396(in 2016)</td>
+<td>Under Construction and Approved</td>
+</tr>
+
+<tr>
+<td>2.</td>
+<td>Colaba - Bandra – SEEPZ</td>
+<td>33.5</td>
+<td>₹24,430</td>
+<td>Under Construction</td>
+</tr>
+
+<tr>
+<td>3.</td>
+<td>Wadala–Ghatkopar-Mulund–Teen Hath Naka–Kasarvadavali</td>
+<td>32</td>
+<td>₹14,549</td>
+<td>Approved</td>
+</tr>
+
+<tr>
+<td>4.</td>
+<td>Thane-Bhiwandi-Kalyan</td>
+<td>24</td>
+<td>₹8,416</td>
+<td>Approved</td>
+</tr>
+
+
+<tr>
+<td>5.</td>
+<td>Lokhandwala-Jogeshwari-Kanjurmarg</td>
+<td>14.5</td>
+<td>₹6,672</td>
+<td>Approved</td>
+</tr>
+</table>
+</div>
+</h3>
+</DIV>
 	  
       <!--div class="page-header">
         <h1>Buttons</h1>
