--- a/s1.html
+++ b/s1.html
@@ -56,7 +56,7 @@
               <a href="#stationpedia" class="dropdown-toggle" data-toggle="dropdown" style="color:white">Stationpedia<span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="s1.html"  style="color:black">Andheri</a></li>
-                <li><a href="s2.html"  style="color:black">Versova</a></li>
+                <!--li><a href="s2.html"  style="color:black">Versova</a></li-->
                 <li><a href="s3.html"  style="color:black">Ghatkopar</a></li>
                 <!--li role="separator" class="divider"></li>
                 <li class="dropdown-header">Nav header</li>
@@ -128,21 +128,140 @@
 
       <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron">
-        <h1>INSTALLATION STEPS</h1>
-        <p>1.On the mobile phone you wish to install the application , open the internet browser and type in the following URL http://www.<br>
-2.You will be prompted to download the “  “ application. Tick the box to set application permissions, then select download. You will see a list of options to allow/deny permissions, change all permissions to 'allow'.<br>
-3.Once the application has been downloaded, you will need to reboot. Switch off the handset then turn it back on. The handset is now ready to be monitored.<br>
-      </div>
+        <h1>Global Fusion</h1>
+        <p>
+Marol
+4229 votes 
+1889 reviews
+B 1, Times Square Tech Park, Andheri Kurla Road, Sakinaka Junction, Andheri East, Marol, Mumbai
+CUISINES:Chinese, Japanese, Asian, North Indian
+COST FOR TWO:₹3,500
+HOURS:
+12 Noon to 3:30 PM, 7 PM to 12 Midnight (Mon-Sun)
+FEATURED IN:
+Pan-Asian delicacies</p>
+   </div>
 
 
 	  <div class="jumbotron">
-        <h1>HOW TO USE THE APPLICATION</h1>
-        <p>1.Once the app is downloaded in your cellphone , open it. On the main screen there will be a button named as “Get Eticket” which will get you to a new page.<br>
-2.On the new page click on button “Get location” to select your source location. Once the source destination is achieved then you can book your ticket by selecting the destination.<br>
-3.The fare details will be displayed and on clicking “generate QR code” you will receive the barcode.Money will be deducted from your corresponding E-wallets.<br>
-4.This barcode will be actively open for 120 seconds, so holding your phones scan the bar code on the entry machine and enter the platform.<br>
-5.Once you reach the destination click on retrieve bar code to scan your eticket again.<br>
-      </div>
+        <h1>Opa! Bar & Cafe - The Peninsula Grand Hotel</h1>
+<p>The Peninsula Grand Hotel, Sakinaka
+1205 votes 
+830 reviews
+Hotel Peninsula Grand, Rooftop, Opposite Sakinaka Metro Station, Andheri Airport Road, Sakinaka, Mumbai
+CUISINES:Lebanese, European, Mediterranean, Arabian
+COST FOR TWO:₹1,700
+HOURS:
+4:30 PM to 1:30 AM (Mon, Tue, Wed, Thu, Sun), 4:30...
+FEATURED IN:
+Valentine's day, Rooftops, Sheesha lounges, Where's the party?
+TODAY:
+Cafe Side</p>
+ </div>
+ 
+   <div class="jumbotron">
+        <h1>JW Café - JW Marriott Mumbai Sahar</h1>
+<p>JW Marriott Mumbai Sahar, Chakala
+506 votes 
+331 reviews
+JW Marriott Mumbai Sahar, IA Project Road, Chhatrapati Shivaji International Airport, Mumbai Sahar, Chakala, Mumbai
+CUISINES:Continental, Desserts, Italian, North Indian, Japanese, Thai
+COST FOR TWO:₹4,000
+HOURS:
+24 Hours (Mon-Sun)
+FEATURED IN:
+Sunday brunches</p>
+
+ </div>
+  <div class="jumbotron"><h1>Eva's Pizza</h1>
+<p>Marol
+1151 votes 
+700 reviews
+7, Harmony Apartments, Off Military Road, Marol, Mumbai
+CUISINES:Pizza, Fast Food
+COST FOR TWO:₹650
+HOURS:
+11 AM to 11 PM (Mon-Sun)
+DISCOUNT:
+Get 15% off all home-delivery. Valid only when you order online on Zomato.</p>
+
+
+ </div>
+   <div class="jumbotron">
+        <h1>Delhi Highway</h1>
+<p>Sakinaka
+699 votes 
+492 reviews
+A4, Ground Floor, B Wing, Times Square, Andheri East, Sakinaka, Mumbai
+CUISINES:North Indian, Mughlai
+COST FOR TWO:₹1,200
+HOURS:
+11:30 AM to 3:30 PM, 7 PM to 11 PM (Mon-Sun)</p>
+
+
+
+ </div>
+ <div class="jumbotron">
+        <h1>The Bar Stock Exchange</h1>
+<p>Sakinaka
+2359 votes 
+1400 reviews
+89, Shivani Industrial Estate, Opposite Times Square, Sakinaka, Mumbai
+CUISINES:Continental, Chinese, North Indian, Italian, Mexican
+COST FOR TWO:₹1,300
+HOURS:
+12 Noon to 4 PM, 6 PM to 1:30 AM (Mon-Sun)</p>
+
+ </div>
+  <div class="jumbotron">
+        <h1>5 Spice</h1>
+<p>Sakinaka
+1806 votes 
+995 reviews
+Mithi Nadi, Sakinaka, Mumbai Andheri East
+CUISINES:Chinese, Desserts
+COST FOR TWO:₹1,100
+HOURS:
+12 Noon to 3 PM, 7 PM to 12 Midnight (Mon-Sun)</p>
+
+
+ </div>
+ 
+   <div class="jumbotron">
+        <h1>Barbeque Nation</h1>
+<p>Marol
+1594 votes 
+806 reviews
+3, Ground Floor, Tower A, Times Square, Andheri-Kurla Road, Marol, Mumbai
+CUISINES:Chinese, North Indian, Mediterranean, Continental
+COST FOR TWO:₹1,600
+HOURS:
+12 Noon to 4 PM, 7 PM to 12 Midnight (Mon-Sun)</p>
+
+
+
+ </div>
+  <div class="jumbotron">
+        <h1>Andheri</h1><p>Persian Darbar
+Marol
+1394 votes 
+836 reviews
+Shop 101 - 102, Noori Baug, Andheri Kurla Road, Marol Naka, Marol, Mumbai
+CUISINES:Biryani, North Indian, Chinese, Persian, Mughlai
+COST FOR TWO:₹1,300
+HOURS:
+10 AM to 2 AM (Mon-Sun)
+FEATURED IN:
+Brilliant biryanis, Kebab places</p>
+
+
+
+
+ </div> 
+ 
+ 
+ 
+ 
 	  
       <!--div class="page-header">
         <h1>Buttons</h1>
