--- a/s3.html
+++ b/s3.html
@@ -56,7 +56,7 @@
               <a href="#stationpedia" class="dropdown-toggle" data-toggle="dropdown" style="color:white">Stationpedia<span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="s1.html"  style="color:black">Andheri</a></li>
-                <li><a href="s2.html"  style="color:black">Versova</a></li>
+                <!--li><a href="s2.html"  style="color:black">Versova</a></li-->
                 <li><a href="s3.html"  style="color:black">Ghatkopar</a></li>
                 <!--li role="separator" class="divider"></li>
                 <li class="dropdown-header">Nav header</li>
@@ -128,21 +128,49 @@
 
       <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron">
-        <h1>INSTALLATION STEPS</h1>
-        <p>1.On the mobile phone you wish to install the application , open the internet browser and type in the following URL http://www.<br>
-2.You will be prompted to download the “  “ application. Tick the box to set application permissions, then select download. You will see a list of options to allow/deny permissions, change all permissions to 'allow'.<br>
-3.Once the application has been downloaded, you will need to reboot. Switch off the handset then turn it back on. The handset is now ready to be monitored.<br>
-      </div>
+        <h1>DREAMS MALL CARNIVAL THEATRE</h1>
+        <p>Movie Theater   Theatre  
+Dreams Mall Carnival Theatre is a place on Bhandup West in Mumbai. Update description
+This place is ranked as:
+• #94 of 468 Movie Theatres in Airoli
+• #72 of 131 Theaters in Mumbai
+Address:
+Bhandup West
+400078 Mumbai</p>
+   </div>
 
 
 	  <div class="jumbotron">
-        <h1>HOW TO USE THE APPLICATION</h1>
-        <p>1.Once the app is downloaded in your cellphone , open it. On the main screen there will be a button named as “Get Eticket” which will get you to a new page.<br>
-2.On the new page click on button “Get location” to select your source location. Once the source destination is achieved then you can book your ticket by selecting the destination.<br>
-3.The fare details will be displayed and on clicking “generate QR code” you will receive the barcode.Money will be deducted from your corresponding E-wallets.<br>
-4.This barcode will be actively open for 120 seconds, so holding your phones scan the bar code on the entry machine and enter the platform.<br>
-5.Once you reach the destination click on retrieve bar code to scan your eticket again.<br>
-      </div>
+        <h1>ZAVERBEN POPATLAL AUDITORIUM</h1>
+        <p> Auditorium  
+Zaverben Popatlal Auditorium is a place on Ghatkopar east in Mumbai.
+Address:
+Ghatkopar east
+400075 Mumbai</p>
+ </div>
+ 
+ <div class="jumbotron">
+        <h1>EAT PLAY LOVE</h1>
+        <p> A place to spend the best of time with your loved ones
+Address:
+Vikrant Circle, Ghatkopar
+Mumbai
+Telephone:
+9320493204
+</p>
+ </div>
+ 
+ <div class="jumbotron">
+        <h1>FUN O FACTORY</h1>
+        <p> Indoor physical play area.Trampoline park,Ropecourse,Softplay.Fun for all age groups.Toddler to Teens.
+Address:
+South Wing, 1st Floor,R City Mall, Ghatkopar,
+400086 Mumbai
+Telephone:
+09820566607
+
+</p>
+ </div>
 	  
       <!--div class="page-header">
         <h1>Buttons</h1>
