--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <!-- Fixed navbar -->
     <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container" style="background-color:#0147FA">
+      <div class="container-fluid" style="background-color:#0147FA">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse" aria-expanded="false" aria-controls="navbar" style="background-color:black">
             <span class="sr-only">Toggle navigation</span>
