--- a/index2.html
+++ b/index2.html
@@ -73,6 +73,7 @@
 	  <div class="jumbotron" style="text-align:center">
         
          <h1>About Us</h1>
+		  <h3>This website is developed as a cause to advertise and promote the Mumbai Metro application. It guides users as to how to use the application. Moreover it also displays information about various metro stations.</h3>
       </div>
 	 
       <div class="jumbotron" style="text-align:center">
