--- a/index.html
+++ b/index.html
@@ -150,6 +150,16 @@
 </div>
 	
 	
+	<div class="container theme-showcase" role="main">
+
+      <!-- Main jumbotron for a primary marketing message or call to action -->
+      <div class="jumbotron">
+        <h1>E-METRO</h1>
+        <p><br>We are a group of programmers who are proud of developing a application for android devices which lets all users to comute travelling via metro with freaat ease.
+		Even though this application  is limited to android users with offers a great realibility on it and is completely crash proof.<br>
+	      </p>             
+      </div>
+	
     <div class="container theme-showcase" role="main">
 
       <!-- Main jumbotron for a primary marketing message or call to action -->
