--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 	</div>
 </div-->
 
- <div  style="background-color:#0147FA;color:white;text-align:center;font-size:200%"><img src="download.png" style="width:120px"/>   &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp MUMBAI METRO  &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp <img src="download.png" style="width:120px"/></div><br><br>
+ <div  style="background-color:#0147FA;color:white;text-align:center;font-size:200%"><img src="download.png" style="width:120px"/>  MUMBAI METRO  <img src="download.png" style="width:120px"/></div><br><br>
 	
 
 <div class="container theme-showcase" role="main">
@@ -155,7 +155,7 @@
       <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron">
         <h1>E-METRO</h1>
-        <p><br>We are a group of programmers who are proud of developing a application for android devices which lets all users to comute travelling via metro with freaat ease.
+        <p><br>We are a group of programmers who are proud of developing an application for android devices which lets all users to comute travelling via metro with freaat ease.
 		Even though this application  is limited to android users with offers a great realibility on it and is completely crash proof.<br>
 	      </p>             
       </div>
