--- a/index2.html
+++ b/index2.html
@@ -50,8 +50,8 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="index.html" style="color:white">Home</a></li>
-            <li><a href="index2.html" style="color:white">About</a></li>
+            <li><a href="index.html" style="color:white">Home</a></li>
+            <li class="active"><a href="index2.html" style="color:white">About</a></li>
             <!--li><a href="#contact">Stationpedia</a></li-->
             <li class="dropdown">
               <a href="#stationpedia" class="dropdown-toggle" data-toggle="dropdown" style="color:white">Stationpedia<span class="caret"></span></a>
