--- a/s1.html
+++ b/s1.html
@@ -37,7 +37,7 @@
 
     <!-- Fixed navbar -->
     <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container" style="background-color:#0147FA">
+      <div class="container-fluid" style="background-color:#0147FA">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse" aria-expanded="false" aria-controls="navbar" style="background-color:black">
             <span class="sr-only">Toggle navigation</span>
@@ -49,10 +49,10 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="index.html" style="color:white">Home</a></li>
+            <li><a href="index.html" style="color:white">Home</a></li>
             <li><a href="index2.html" style="color:white">About</a></li>
             <!--li><a href="#contact">Stationpedia</a></li-->
-            <li class="dropdown">
+            <li class="dropdown active">
               <a href="#stationpedia" class="dropdown-toggle" data-toggle="dropdown" style="color:white">Stationpedia<span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="s1.html"  style="color:black">Andheri</a></li>
