--- a/s3.html
+++ b/s3.html
@@ -125,7 +125,7 @@
  <div style="background-color:#0147FA;color:white;height:100%;text-align:center;font-size:200%"><img src="download.png" style="width:120px"/> &nbsp MUMBAI METRO &nbsp <img src="download.png" style="width:120px"/></div><br><br>
 	
     <div class="container theme-showcase" role="main">
-	    <h1 style="text-align:center">GHATKOPAR</h1><br>
+	    <h1 style="text-align:center">PLACES NEAR GHATKOPAR</h1><br>
 
       <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron">
