--- a/s3.html
+++ b/s3.html
@@ -73,26 +73,16 @@
 		<ol class="carousel-indicators">
 			<li data-target="#myslider" data-slide-to="0" class="active"></li>
 			<li data-target="#myslider" data-slide-to="1"></li>
-			<li data-target="#myslider" data-slide-to="2"></li>
-			<li data-target="#myslider" data-slide-to="3"></li>
-			<li data-target="#myslider" data-slide-to="4"></li>
+			
 		</ol>
 		<div class="carousel-inner">
 			<div class="item active">
-				<img src="1.jpg" width="100%">
-			</div>
-			<div class="item">
-				<img src="mumbai-metro11.jpg" width="100%">
-			</div>
-			<div class="item">
 				<img src="maxresdefault.jpg" width="100%">
 			</div>
 			<div class="item">
-				<img src="388514-mumbaimetro-98.jpg" width="100%">
+				<img src="ss1.jpg" width="100%">
 			</div>
-			<div class="item">
-				<img src="2.jpg" width="100%">
-			</div>
+			
 		</div>
 		<a class="carousel-control left" href="#myslider" data-slide="prev">
 			<span class="glyphicon glyphicon-chevron-left"></span>
