--- a/s1.html
+++ b/s1.html
@@ -79,20 +79,12 @@
 		</ol>
 		<div class="carousel-inner">
 			<div class="item active">
-				<img src="1.jpg" width="100%">
-			</div>
-			<div class="item">
-				<img src="mumbai-metro11.jpg" width="100%">
-			</div>
-			<div class="item">
 				<img src="maxresdefault.jpg" width="100%">
 			</div>
 			<div class="item">
-				<img src="388514-mumbaimetro-98.jpg" width="100%">
+				<img src="ss1.jpg" width="100%">
 			</div>
-			<div class="item">
-				<img src="2.jpg" width="100%">
-			</div>
+			
 		</div>
 		<a class="carousel-control left" href="#myslider" data-slide="prev">
 			<span class="glyphicon glyphicon-chevron-left"></span>
